# frics

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
frics/: __init__.py  app.py  codeshare.py  frics.css
